--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -126,32 +126,31 @@
                       <div>
                         {% comment %} emote {% endcomment %}
                         <div class="d-flex">
-                          <form action="{% url 'reviews:emotes' review.pk 1 %}" method="POST">
+                          <form class="review-like-forms d-flex" data-review-id="{{ review.pk }}">
                             {% csrf_token %}
-                            {% if request.user.is_authenticated and review.like_exist %}
-                              <button type="submit" class="border-0 bg-transparent">
-                                <i class="bi bi-hand-thumbs-up-fill"></i> {{ review.likes|length }}
-                              </button>
-                            {% else %}
-                              <button type="submit" class="border-0 bg-transparent">
-                                <i class="bi bi-hand-thumbs-up"></i> {{ review.likes|length }}
-                              </button>
-                            {% endif %}
+                            <button type="submit" class="btn-like border-0 bg-transparent" id="review-like-{{ review.pk }}">
+                              {% if request.user.is_authenticated and review.like_exist %}
+                              <i class="bi bi-hand-thumbs-up-fill"></i> 
+                              <span>{{ review.likes|length }}</span>
+                              {% else %}
+                              <i class="bi bi-hand-thumbs-up"></i>
+                              <span>{{ review.likes|length }}</span>
+                              {% endif %}
+                            </button>
                           </form>
-                          <form action="{% url 'reviews:emotes' review.pk 2 %}" method="POST">
-                            {% csrf_token %}
-                            {% if request.user.is_authenticated and review.dislike_exist %}
-                              <button type="submit" class="border-0 bg-transparent">
-                                <i class="bi bi-hand-thumbs-down-fill"></i> {{ review.dislikes|length }}
-                              </button>
-                            {% else %}
-                              <button type="submit" class="border-0 bg-transparent">
-                                <i class="bi bi-hand-thumbs-down"></i> {{ review.dislikes|length }}
-                              </button>
-                            {% endif %}
+                          <form class="review-dislike-forms d-flex" data-review-id="{{ review.pk }}">
+                            <button type="submit" class="btn-dislike border-0 bg-transparent" id="review-dislike-{{ review.pk }}">
+                              {% if request.user.is_authenticated and review.dislike_exist %}
+                              <i class="bi bi-hand-thumbs-down-fill"></i> 
+                              <span>{{ review.dislikes|length }}</span>
+                              {% else %}
+                              <i class="bi bi-hand-thumbs-down"></i>
+                              <span>{{ review.dislikes|length }}</span> 
+                              {% endif %}
+                            </button>
                           </form>
                         </div>
-        
+      
                         {% comment %} rating {% endcomment %}
                         <div class="text-center">별점 : {{ review.rate_to_star }}</div>
                       </div>
@@ -255,12 +254,81 @@
           iTag.classList.replace('bi-star-fill', 'bi-star')
           iTag.classList.remove('text-orange')
         }
-        console.log(iTag)
       })
       .catch((error) => {
         console.log(error.response)
       })
       })
     })
+
+  // 비동기 리뷰 좋아요/싫어요
+  const reviewLikeForms = document.querySelectorAll('.review-like-forms')
+  const reviewDislikeForms = document.querySelectorAll('.review-dislike-forms')
+
+  reviewLikeForms.forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      event.preventDefault()
+      
+      const reviewId = event.target.dataset.reviewId
+      axios({
+        method: 'post',
+        url: `/reviews/${ reviewId }/emotes/1/`,
+        headers: {'X-CSRFToken': csrftoken,},
+      })
+      .then((response) => {
+        const isChecked = response.data.is_checked
+        const emoteCnt = response.data.cnt
+        const isAlert = response.data.alert
+        const iTag = document.querySelector(`#review-like-${ reviewId }>i`)
+        const cntSpanTag = document.querySelector(`#review-like-${ reviewId }>span`)
+
+        if (isAlert) {
+
+        } else if (isChecked) {
+          iTag.classList.replace('bi-hand-thumbs-up', 'bi-hand-thumbs-up-fill')
+          cntSpanTag.textContent = emoteCnt
+        } else {
+          iTag.classList.replace('bi-hand-thumbs-up-fill', 'bi-hand-thumbs-up')
+          cntSpanTag.textContent = emoteCnt
+        }
+      })
+      .catch((error) => {
+        console.log(error.response)
+      })
+    })
+  })
+  reviewDislikeForms.forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      event.preventDefault()
+      
+      const reviewId = event.target.dataset.reviewId
+      axios({
+        method: 'post',
+        url: `/reviews/${ reviewId }/emotes/2/`,
+        headers: {'X-CSRFToken': csrftoken,},
+      })
+      .then((response) => {
+        const isChecked = response.data.is_checked
+        const emoteCnt = response.data.cnt
+        const isAlert = response.data.alert
+        const iTag = document.querySelector(`#review-dislike-${ reviewId }>i`)
+        const cntSpanTag = document.querySelector(`#review-dislike-${ reviewId }>span`)
+
+        if (isAlert) {
+
+        } else if (isChecked) {
+          iTag.classList.replace('bi-hand-thumbs-down', 'bi-hand-thumbs-down-fill')
+          cntSpanTag.textContent = emoteCnt
+        } else {
+          iTag.classList.replace('bi-hand-thumbs-down-fill', 'bi-hand-thumbs-down')
+          cntSpanTag.textContent = emoteCnt
+        }
+      })
+      .catch((error) => {
+        console.log(error.response)
+      })
+    })
+  })
+  
 </script>
 {% endblock script %}
