--- a/stores/templates/stores/all_stores.html
+++ b/stores/templates/stores/all_stores.html
@@ -53,13 +53,50 @@
           {% endif %}
         </p>
         <a href="{% url 'stores:detail' store.pk %}" class="text-body-tertiary mt-3 align-self-end">{{ store.name }} 더보기 ></a>
-  
       </div>
     </div>
-
   </section>
   {% endfor %}
 </main>
+
+
+<div>
+  <ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+      </li>
+    {% endif %}
+    
+    {% for page_number in page_obj.paginator.page_range %}
+      {% if page_number >= page_obj.number|add:-5 and page_number <= page_obj.number|add:5 %}
+        {% if page_number == page_obj.number %}
+          <li class="page-item active" aria-current="page">
+            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+          </li>
+        {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+          </li>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+    {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+      </li>
+    {% endif %}
+  </ul>
+</div>
+
 {% endblock content %}
 
 
