--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,16 @@
   padding: 0 0.5rem;
 }
 
+.stores-create-input>p>textarea {
+  font-size: 1.5rem;
+  padding: 0 0.5rem;
+}
+
+.stores-create-input>p>select {
+  font-size: 1.5rem;
+  padding: 0 0.5rem;
+}
+
 .text-orange {
   color: orange;
 }
@@ -36,4 +46,17 @@
 .food-thumbnail-img {
   width: 15rem;
   height: 15rem;
+}
+
+/* reviews */
+.reviews-input > p > input {
+  font-size: 1.5rem;
+}
+
+.reviews-input > p > textarea {
+  font-size: 1.5rem;
+}
+
+.reviews-input > p > select {
+  font-size: 1.5rem;
 }
