--- a/stores/templates/stores/all_stores.html
+++ b/stores/templates/stores/all_stores.html
@@ -60,21 +60,29 @@
 </main>
 
 
+{% comment %} pagination {% endcomment %}
 <div>
   <ul class="pagination justify-content-center">
-    {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page=1">처음</a>
+    </li>
+    {% if stores.has_previous %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
+        <a class="page-link" href="?page={{ stores.previous_page_number }}">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
       </li>
     {% else %}
       <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
       </li>
     {% endif %}
-    
-    {% for page_number in page_obj.paginator.page_range %}
-      {% if page_number >= page_obj.number|add:-5 and page_number <= page_obj.number|add:5 %}
-        {% if page_number == page_obj.number %}
+  
+    {% for page_number in stores.paginator.page_range %}
+      {% if page_number >= stores.number|add:-5 and page_number <= stores.number|add:5 %}
+        {% if page_number == stores.number %}
           <li class="page-item active" aria-current="page">
             <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
           </li>
@@ -85,17 +93,26 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-    {% if page_obj.has_next %}
+  
+    {% if articles.has_next %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
+        <a class="page-link" href="?page={{ stores.next_page_number }}">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
       </li>
     {% else %}
       <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
       </li>
     {% endif %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ last_page }}">마지막</a>
+    </li>
   </ul>
 </div>
+{% comment %}  {% endcomment %}
 
 {% endblock content %}
 
@@ -138,3 +155,5 @@
     })
 </script>
 {% endblock script %}
+
+
