--- a/stores/templates/stores/all_stores.html
+++ b/stores/templates/stores/all_stores.html
@@ -94,7 +94,7 @@
       {% endif %}
     {% endfor %}
   
-    {% if articles.has_next %}
+    {% if stores.has_next %}
       <li class="page-item">
         <a class="page-link" href="?page={{ stores.next_page_number }}">
           <span aria-hidden="true">&raquo;</span>
@@ -108,7 +108,7 @@
       </li>
     {% endif %}
     <li class="page-item">
-      <a class="page-link" href="?page={{ last_page }}">마지막</a>
+      <a class="page-link" href="?page={{ stores.paginator.num_pages }}">마지막</a>
     </li>
   </ul>
 </div>
