--- a/reviews/templates/reviews/update.html
+++ b/reviews/templates/reviews/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}25 & 27: 리뷰 수정{% endblock title %}
+{% block title %} - 리뷰 수정{% endblock title %}
 
 {% block content %}
 <h1 class="my-5 text-center fw-bold">리뷰 수정</h1>
