--- a/stores/templates/stores/index.html
+++ b/stores/templates/stores/index.html
@@ -31,7 +31,7 @@
                     <div class="container-lg">
                     <div class="carousel-item active">
                             <div class="row d-flex justify-content-center mb-2">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 index-carousel-action">
                                     <div class="container d-flex justify-content-center">
                                         <div class="row">
                                             <div class="container d-flex justify-content-center">
@@ -229,10 +229,10 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <div class="carousel-indicators" style="bottom: -3rem;">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active me-2" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2" class="me-2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3" class="me-2"></button>
                 </div>
             </div>       
         </div>
