Update accounts forms, templates

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>비밀번호 변경</h2>
-  <form action="{% url 'accounts:change_password' %}" method ="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <div class="container-fluid d-flex justify-content-end me-5 mt-3">
-    <input type="submit" class="btn btn-outline-primary">
+<div class="container-fluid mt-5">
+  <div class="container-fluid d-flex justify-content-center">
+    <img src="https://d1.awsstatic.com/logos/customers/KO/logo_Mangoplate.12908c5b9952bc4f14bdc966e5e81b521415fc6a.png" style="width: 20rem;">
   </div>
-  </form>
+  <div class="container mt-5" style="width: 500px;">
+    <h1 class="fw-bold text-center">비밀번호 변경</h1>
+    <form action="{% url 'accounts:change_password' %}" method="POST" class="form-text" enctype="multipart/form-data">
+      {% csrf_token %}
+      {% for field in form %}
+        <label for="{{ field.auto_id }}" class="ms-2">{{ field.label }}</label>
+        {{ field }}
+        {% if field.errors %}
+          <span>{{ field.errors }}</span>
+        {% endif %}
+      {% endfor %}
+      <input type="submit" class="btn btn-orange w-100 mt-5 mb-3 fs-3" value="비밀번호 변경">
+    </form>
+  </div>
+</div>
  {% endblock content %}
