--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -5,22 +5,20 @@
     <div class="container-fluid d-flex justify-content-center">
       <img src="https://d1.awsstatic.com/logos/customers/KO/logo_Mangoplate.12908c5b9952bc4f14bdc966e5e81b521415fc6a.png" style="width: 20rem;">
     </div>
-    <div class="container d-flex justify-content-center mt-5">
-      <ul class="nav flex-column">
-          <li class="nav-item text-center">
-              <p class="fs-5 ms-3">회원정보 수정</p>
-          </li>
-          <li class="nav-item">
-          <form action="{% url 'accounts:update' %}" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <a href="{% url 'accounts:change_password' %}" class="btn-orange">비밀번호 변경</a>
-            <div class="container-fluid d-flex justify-content-center">
-              <input type="submit" class="btn btn-orange"  role="button" value="정보수정">
-            </div>
-          </form>
-          </li>
-      </ul>
+    <div class="container mt-5" style="width: 500px;">
+      <h1 class="fw-bold text-center">회원정보 수정</h1>
+      <form action="{% url 'accounts:update' %}" method="POST" class="form-text" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% for field in form %}
+          <label for="{{ field.auto_id }}" class="ms-2">{{ field.label }}</label>
+          {{ field }}
+          {% if field.errors %}
+            <span>{{ field.errors }}</span>
+          {% endif %}
+        {% endfor %}
+        <input type="submit" class="btn btn-orange w-100 mt-5 mb-3 fs-3" value="정보수정">
+        <a href="{% url 'accounts:change_password' %}" class="btn btn-orange w-100 fs-3">비밀번호 변경</a>
+      </form>
     </div>
 </div>
 
