pagination.stores-catregory, detail, search

--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="container-fluid">
-                {% for review in reviews %}
+                {% for review in page_obj %}
                   <div>
                     {% comment %} 프로필, 작성일, 리뷰 내용, 이미지 {% endcomment %}
                     <div class="container-fluid d-flex justify-content-between mt-3">
@@ -194,6 +194,59 @@
                   </div>
                   <hr>
                 {% endfor %}
+
+                {% comment %} 아마 여기 {% endcomment %}
+                <div>
+                  <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                      <a class="page-link" href="?page=1">처음</a>
+                    </li>
+                    {% if page_obj.has_previous %}
+                      <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                    {% else %}
+                      <li class="page-item disabled">
+                        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                    {% endif %}
+                  
+                    {% for page_number in page_obj.paginator.page_range %}
+                      {% if page_number >= page_obj.number|add:-5 and page_number <= page_obj.number|add:5 %}
+                        {% if page_number == page_obj.number %}
+                          <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+                          </li>
+                        {% else %}
+                          <li class="page-item">
+                            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+                          </li>
+                        {% endif %}
+                      {% endif %}
+                    {% endfor %}
+                  
+                    {% if page_obj.has_next %}
+                      <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    {% else %}
+                      <li class="page-item disabled">
+                        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    {% endif %}
+                    <li class="page-item">
+                      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">마지막</a>
+                    </li>
+                  </ul>
+                </div>
                 
             </div>
         </div>
@@ -217,6 +270,7 @@
     인덱스처럼 다른 식당 리스트 불러오기
   </div>
 </main>
+
 
 {% endblock content %}
 
