--- a/stores/templates/stores/search.html
+++ b/stores/templates/stores/search.html
@@ -70,8 +70,9 @@
         {{ review.rating }}
         <a href="{% url 'stores:detail' review.store.pk %}">{{ review.store.name }}</a>
     {% endfor %}
-
-
+    {% for tag in store.tags.all %}
+    <p>{{ tag.name }}</p>
+    {% endfor %}
 </main>
 {% endblock content %}
 
