--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -6,9 +6,9 @@
 <main class="bg-body-tertiary">
 
   <header class="container-fluid container-lg">
-    <div id="reviewImage" class="carousel slide" style="height: 350px;">
+    <div id="reviewImage" class="carousel slide" data-bs-ride="carousel" style="height: 350px;">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-bs-interval="2000">
           {% if store.thumbnail %}
           <img src="{{ store.thumbnail.url }}" class="d-block mx-auto" alt="thumbnail" style="height: 350px;">
           {% else %}
@@ -16,7 +16,7 @@
           {% endif %}
         </div>
         {% for store_image in store_images %}
-          <div class="carousel-item">
+          <div class="carousel-item" data-bs-interval="2000">
             <img src="{{ store_image.image.url }}" class="d-block mx-auto" alt="store_image" style="height: 350px;">
           </div>
         {% endfor %}
